// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Alert Error 1`] = `
<div
  className="alert alert--error"
>
  <div
    className="alert__icon alert__icon--error"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11 15h2v2h-2v-2zm0-8h2v6h-2V7zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
  </div>
  <div
    className="alert__message"
  >
    こちらのEmailアドレスは現在登録されていません
  </div>
  <div
    className="alert__close"
    role="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 352 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots Alert Success 1`] = `
<div
  className="alert alert--success"
>
  <div
    className="alert__icon alert__icon--error"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 1024 1024"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0 0 51.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
      />
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
      />
    </svg>
  </div>
  <div
    className="alert__message"
  >
    ログインに成功しました！
  </div>
  <div
    className="alert__close"
    role="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 352 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots AuthLoading Default 1`] = `
<div
  className="authLoading"
  style={Object {}}
>
  Authorizing
  <div
    className="authLoadingText"
  />
  <span
    className="authLoadingCircle"
    style={
      Object {
        "opacity": 0,
        "transform": "translateY(200%) translateZ(0)",
      }
    }
  />
  <span
    className="authLoadingCircle"
    style={
      Object {
        "opacity": 0,
        "transform": "translateY(200%) translateZ(0)",
      }
    }
  />
  <span
    className="authLoadingCircle"
    style={
      Object {
        "opacity": 0,
        "transform": "translateY(200%) translateZ(0)",
      }
    }
  />
</div>
`;

exports[`Storyshots BackDrop Default 1`] = `
<div
  className="backdrop"
  style={
    Object {
      "opacity": 0,
    }
  }
/>
`;

exports[`Storyshots BackDrop Disabled 1`] = `
<div
  className="disabledBackdrop"
  style={
    Object {
      "opacity": 0,
    }
  }
/>
`;

exports[`Storyshots Button Default 1`] = `
<button
  className="button button--md  "
  onClick={[Function]}
  style={Object {}}
  type="button"
>
  Button
</button>
`;

exports[`Storyshots CategoryBadge Default 1`] = `
<div
  className="categoryTag ab"
  onClick={[Function]}
>
  腹
</div>
`;

exports[`Storyshots Checkbox Default 1`] = `
<div
  className="checkbox"
>
  <div
    aria-checked="true"
    className="checkbox__circle false"
    role="checkbox"
    tabIndex={0}
  />
  <p
    className="checkbox__label"
  >
    Remenber Me
  </p>
</div>
`;

exports[`Storyshots CreateLogCard Default 1`] = `
<div
  className="createLog"
>
  <div
    className="flex-box  flex-box--justify-start "
  >
    <div
      className="header"
    >
      💪🏼 ログを残す
    </div>
  </div>
  <div
    className="tag"
  >
    <div
      className="tagItem"
    >
      <div
        className="categoryTag sholder"
        onClick={[Function]}
      >
        肩
      </div>
    </div>
    <div
      className="tagItem"
    >
      <div
        className="categoryTag chest"
        onClick={[Function]}
      >
        胸
      </div>
    </div>
    <div
      className="tagItem"
    >
      <div
        className="categoryTag ab"
        onClick={[Function]}
      >
        腹
      </div>
    </div>
    <div
      className="tagItem"
    >
      <div
        className="categoryTag back"
        onClick={[Function]}
      >
        背中
      </div>
    </div>
    <div
      className="tagItem"
    >
      <div
        className="categoryTag arm"
        onClick={[Function]}
      >
        腕
      </div>
    </div>
    <div
      className="tagItem"
    >
      <div
        className="categoryTag legs"
        onClick={[Function]}
      >
        足
      </div>
    </div>
  </div>
  <div
    className="flex-box   "
  >
    <div
      className="select"
    >
      <div
        className="select"
        onClick={[Function]}
      >
        <div
          className="placeholder"
        >
          部位を選択してください
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex-box   "
  >
    <div
      className="select"
    >
      <button
        className="button button--md  "
        style={Object {}}
        type="button"
      >
        登録する
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots CreateLogCard Default 2 1`] = `
<div
  className="backdrop"
  style={
    Object {
      "opacity": 0,
    }
  }
>
  <div
    className="modal"
    onClick={[Function]}
    style={
      Object {
        "opacity": 0,
        "transform": "translateY(-15vh) translateZ(0)",
      }
    }
  >
    <div
      className="modal__title"
    />
    <button
      className="modal__close"
      onClick={null}
      type="button"
    >
      <div
        className="modal__close__btn"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 352 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
          />
        </svg>
      </div>
    </button>
    <div
      className="createLog"
    >
      <div
        className="flex-box  flex-box--justify-start "
      >
        <div
          className="header"
        >
          💪🏼 ログを残す
        </div>
      </div>
      <div
        className="tag"
      >
        <div
          className="tagItem"
        >
          <div
            className="categoryTag sholder"
            onClick={[Function]}
          >
            肩
          </div>
        </div>
        <div
          className="tagItem"
        >
          <div
            className="categoryTag chest"
            onClick={[Function]}
          >
            胸
          </div>
        </div>
        <div
          className="tagItem"
        >
          <div
            className="categoryTag ab"
            onClick={[Function]}
          >
            腹
          </div>
        </div>
        <div
          className="tagItem"
        >
          <div
            className="categoryTag back"
            onClick={[Function]}
          >
            背中
          </div>
        </div>
        <div
          className="tagItem"
        >
          <div
            className="categoryTag arm"
            onClick={[Function]}
          >
            腕
          </div>
        </div>
        <div
          className="tagItem"
        >
          <div
            className="categoryTag legs"
            onClick={[Function]}
          >
            足
          </div>
        </div>
      </div>
      <div
        className="flex-box   "
      >
        <div
          className="select"
        >
          <div
            className="select"
            onClick={[Function]}
          >
            <div
              className="placeholder"
            >
              部位を選択してください
            </div>
          </div>
        </div>
      </div>
      <div
        className="flex-box   "
      >
        <div
          className="select"
        >
          <button
            className="button button--md  "
            style={Object {}}
            type="button"
          >
            登録する
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Gukou UI/Atoms/Grid/Container Default 1`] = `
<div
  className="container"
>
  <div
    className="container__storybook"
  >
    <h1>
      Default Container
    </h1>
    <h3>
      Max Widths!!!
    </h3>
  </div>
</div>
`;

exports[`Storyshots Header Default 1`] = `
<div
  className="tralog-header"
>
  <div
    className="background"
    style={
      Object {
        "height": "",
      }
    }
  >
    <svg
      viewBox="0 0 1440 320"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0,64L48,69.3C96,75,192,85,288,90.7C384,96,480,96,576,90.7C672,85,768,75,864,69.3C960,64,1056,64,1152,74.7C1248,85,1344,107,1392,117.3L1440,128L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"
        fill="#0099ff"
        fillOpacity="1"
      />
    </svg>
  </div>
  <div
    className="tralog-navbar"
  >
    <div
      className="tralog-navbar__container"
    >
      <div
        className="tralog-header__title"
      >
        TRALOG!
      </div>
      <button
        className="tralog-navbar__container__btn-group__btn"
        type="button"
      >
        始めてみる
      </button>
    </div>
  </div>
  <div
    className="tralog-header__container"
  >
    <div
      className="tralog-header__container__description"
    >
      WORKOUT
      <br />
      WITH ME
    </div>
    <div
      className="tralog-header__container__description"
    >
      <div
        className="mock"
      >
        <svg
          fill="none"
          height="500"
          viewBox="0 0 2240 2000"
          width="500"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <rect
            fill="url(#pattern0)"
            height="2000"
            width="2240"
          />
          <defs>
            <pattern
              height="1"
              id="pattern0"
              patternContentUnits="objectBoundingBox"
              width="1"
            >
              <use
                transform="scale(0.000446429)"
                xlinkHref="#image0_2_17"
              />
            </pattern>
            <image
              height="2000"
              id="image0_2_17"
              width="2240"
            />
          </defs>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Input Default 1`] = `
<div
  className="form"
>
  <input
    autoComplete="off"
    className="form__input "
    onChange={[Function]}
    placeholder=" "
    type="text"
  />
  <label
    className="form__label"
  >
    Email
  </label>
</div>
`;

exports[`Storyshots Modal Default 1`] = `
<div
  className="backdrop"
  style={
    Object {
      "opacity": 0,
    }
  }
>
  <div
    className="modal"
    onClick={[Function]}
    style={
      Object {
        "opacity": 0,
        "transform": "translateY(-15vh) translateZ(0)",
      }
    }
  >
    <div
      className="modal__title"
    />
    <button
      className="modal__close"
      type="button"
    >
      <div
        className="modal__close__btn"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 352 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots Select Default 1`] = `
<div
  className="select"
  onClick={[Function]}
>
  <div
    className="placeholder"
  >
    部位を選択してください
  </div>
</div>
`;
